syntax = "proto3";

package dev.xfj.protobuf;

option java_multiple_files = true;
option java_package = "dev.xfj.protobuf";
option java_outer_classname = "Scene";

message SceneFile {
  string name = 1;
  repeated EntityFile entities = 2;
}

message EntityFile {
  TagFile tag = 1;
  TransformFile transform = 2;
  SpriteRendererFile sprite_renderer = 3;
  CameraFile camera = 4;
}

message TagFile {
  string tag = 1;
}

message TransformFile {
  repeated float translation = 1;
  repeated float rotation = 2;
  repeated float scale = 3;
}

message CameraFile {
  enum ProjectionType {
    Perspective = 0;
    Orthographic = 1;
  }
  ProjectionType projection_type = 1;
  float perspective_fov = 2;
  float perspective_near = 3;
  float perspective_far = 4;
  float orthographic_size = 5;
  float orthographic_near = 6;
  float orthographic_far = 7;
  float aspect_ratio = 8;
  bool primary = 9;
  bool fixed_aspect_ratio = 10;
}

message SpriteRendererFile {
  repeated float color = 1;
}